--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: eddiehinkle
 github_username:  edwardhinkle
 
 # Build settings
-theme: jekyll-theme-tactile
+theme: minima
 plugins:
   - jekyll-feed
 
